<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/dropbox_sync"
        android:icon="@drawable/tool_ic_save_joseto"
        android:showAsAction="always"
        android:title="@string/action_forgot_password"/>
    <item
        android:id="@+id/action_load"
        android:icon="@drawable/ic_action_cloud_joseto"
        android:showAsAction="always"
        android:title="@string/action_load"/>
    <item
        android:id="@+id/logout"
        android:title="@string/Logout">
    </item>
    <item
        android:id="@+id/wifi_p2p"
        android:icon="@drawable/ic_action_network_wifi_joseto"
        android:showAsAction="always"
        android:title="@string/action_wifi_p2p">
    </item>
    <item android:id="@+id/comments" android:title="@string/comments"></item>

</menu>