<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:orientation="horizontal" >
    
    <LinearLayout 
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="left">
    
    <TextView 
        android:id="@+id/DeviceName"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:singleLine="true"
		android:layout_gravity="left"
		android:text="@string/device_name_def"
		/>
    
    <TextView 
        android:id="@+id/DeviceStatus"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:singleLine="true"
		android:text="@string/device_status_def"
		/>
    
    <TextView 
        android:id="@+id/DeviceOwner"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/device_status_def"
		/>
    
	</LinearLayout>

    <Button
        android:id="@+id/DeviceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect"
        android:layout_gravity="right" />

</LinearLayout>