<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/tool_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_gravity="top|right"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/moveBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dip"
            android:layout_weight="1"
            android:background="@drawable/selector_tool_bg"
            android:src="@drawable/selector_move" />

        <ImageView
            android:id="@+id/penBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dip"
            android:layout_weight="1"
            android:background="@drawable/selector_tool_bg"
            android:src="@drawable/selector_pen" />

        <ImageView
            android:id="@+id/eraseBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dip"
            android:layout_weight="1"
            android:background="@drawable/selector_tool_bg"
            android:src="@drawable/selector_eraser" />

        <ImageView
            android:id="@+id/textBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dip"
            android:layout_weight="1"
            android:background="@drawable/selector_tool_bg"
            android:src="@drawable/selector_text" />

        <ImageView
            android:id="@+id/undoBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dip"
            android:layout_weight="1"
            android:background="@drawable/selector_tool_bg"
            android:src="@drawable/selector_undo" />

        <ImageView
            android:id="@+id/redoBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dip"
            android:layout_weight="1"
            android:background="@drawable/selector_tool_bg"
            android:src="@drawable/selector_redo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottomLine"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#ffededed" />

            <Button
                android:id="@+id/panUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/up"
                android:textSize="25sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#ffededed" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/panLeft"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/left"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/zoomScale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" />

            <Button
                android:id="@+id/panRight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/right"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/zoomOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/minus"
                android:textSize="25sp" />

            <Button
                android:id="@+id/panDown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/down"
                android:textSize="25sp" />

            <Button
                android:id="@+id/zoomIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/plus"
                android:textSize="25sp" />
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/layout_container"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/bottomLine"
        android:layout_below="@id/tool_menu" >

        <RelativeLayout
            android:id="@+id/canvas_container"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="#ffffffff" >
        </RelativeLayout>
    </FrameLayout>

</RelativeLayout>